--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Some python programs that I wrote during my CS1 class. I thought some of them might
+Some python programs that I wrote during my CS1 / CS2 classes. I thought some of them might
 be useful or if you're just learning python it's a great place to start.
 
 Copyright (C) 2012 Troy Caro
